src/test/ui/consts/issue-83182.32bit.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/issue-83182.rs:5:1
   |
LL | const MYSTR_NO_INIT: &MyStr = unsafe { mem::transmute::<&[_], _>(&[&()]) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unable to turn pointer into raw bytes
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported
   = note: the raw bytes of the constant (size: 8, align: 4) {
               ╾─alloc4──╼ 01 00 00 00                         │ ╾──╼....
           }

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
